<resources>
    <string name="app_name">RUNSICAL</string>
    <string name="welcome">Welcome to</string>
    <string name="email"> email address</string>
    <string name="password"> password</string>
    <string name="confirmPassword">confirm password</string>
    <string name="signin">SIGN IN</string>
    <string name="newuser">New to Runsical?</string>
    <string name="backToLogin">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="createaccount">Create an account</string>
    <string name="fullname">full name</string>
    <string name="signup">SIGN UP</string>
    <string name="description">An Android application that curates running music based on the user\'s genre preferences and running speed.</string>
    <string name="play">Play</string>
    <string name="speed">3.0</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="database">Runsical.db</string>
</resources>
